# ros_iri_wam

./: CMakeLists.txt  README.md  package.xml  stack.xml
docs/: WamConfig-usage.dox
iri_bhand/: manifest.xml
ros/iri-ros-pkg/stacks/estirabot_robot/trunk/iri_dummy_pomdp/: CMakeLists.txt  mainpage.dox  manifest.xml
ros/iri-ros-pkg/stacks/estirabot_robot/trunk/iri_dummy_pomdp/include/: dummy_pomdp.h  fixed_strategy.h  pomdp.h  pomdp_modeler.h
ros/iri-ros-pkg/stacks/estirabot_robot/trunk/iri_dummy_pomdp/src/: dummy_pomdp.cpp  fixed_strategy.cpp  pomdp.cpp  pomdp_modeler.cpp
ros/iri-ros-pkg/stacks/iri_common_drivers/trunk/iri_firewire_camera/: CMakeLists.txt  mainpage.dox  manifest.xml
ros/iri-ros-pkg/stacks/iri_common_drivers/trunk/iri_firewire_camera/cfg/: firewire_camera_driver_config.cfg
ros/iri-ros-pkg/stacks/iri_common_drivers/trunk/iri_firewire_camera/docs/: FirewireCameraConfig-usage.dox  FirewireCameraConfig.dox  FirewireCameraConfig.wikidoc
ros/iri-ros-pkg/stacks/iri_common_drivers/trunk/iri_firewire_camera/include/: firewire_camera_driver.h  firewire_camera_driver_node.h
ros/iri-ros-pkg/stacks/iri_common_drivers/trunk/iri_firewire_camera/launch/: camera0rgb.launch
ros/iri-ros-pkg/stacks/iri_common_drivers/trunk/iri_firewire_camera/src/: firewire_camera_driver.cpp  firewire_camera_driver_node.cpp
ros/iri-ros-pkg/stacks/iri_common_drivers/trunk/iri_joystick/: CMakeLists.txt  mainpage.dox  manifest.xml
ros/iri-ros-pkg/stacks/iri_common_drivers/trunk/iri_joystick/cfg/: iri_joystick_driver_config.cfg
ros/iri-ros-pkg/stacks/iri_common_drivers/trunk/iri_joystick/include/: iri_joystick_driver.h  iri_joystick_driver_node.h
ros/iri-ros-pkg/stacks/iri_common_drivers/trunk/iri_joystick/launch/: iri_joystick_debug_node.launch  iri_joystick_test_node.launch  turtle_joy_iri.launch
ros/iri-ros-pkg/stacks/iri_common_drivers/trunk/iri_joystick/src/: iri_joystick_driver.cpp  iri_joystick_driver_node.cpp
ros/iri-ros-pkg/stacks/iri_common_drivers/trunk/iri_pmdcamera/: CMakeLists.txt  mainpage.dox  manifest.xml
ros/iri-ros-pkg/stacks/iri_common_drivers/trunk/iri_pmdcamera/cfg/: pmdcamera_driver_config.cfg
ros/iri-ros-pkg/stacks/iri_common_drivers/trunk/iri_pmdcamera/docs/: PmdcameraConfig-usage.dox  PmdcameraConfig.dox  PmdcameraConfig.wikidoc
ros/iri-ros-pkg/stacks/iri_common_drivers/trunk/iri_pmdcamera/include/: camcube.h  pmdcamera_driver.h  pmdcamera_driver_node.h  pmdcamera_exceptions.h
ros/iri-ros-pkg/stacks/iri_common_drivers/trunk/iri_pmdcamera/info/: camboard_calibration.yaml  camcube_calibration.yaml  pmdcamera.vcg
ros/iri-ros-pkg/stacks/iri_common_drivers/trunk/iri_pmdcamera/launch/: bothcameras.launch  camboard.launch  camcube.launch  camcube_debug.launch
ros/iri-ros-pkg/stacks/iri_common_drivers/trunk/iri_pmdcamera/src/: dev_camcube.cpp  kinectCameraTfPublisher.cpp  kinectCameraWamTfPublisher.cpp  pmdCameraTfPublisher.cpp  pmdcamera_driver.cpp  pmdcamera_driver_node.cpp  pmdcamera_exceptions.cpp
ros/iri-ros-pkg/stacks/iri_perception_filters/trunk/iri_pcl_filters/: CMakeLists.txt  mainpage.dox  manifest.xml
ros/iri-ros-pkg/stacks/iri_perception_filters/trunk/iri_pcl_filters/include/: bounding_box.h  dummy_mofa_bridge.h  jump_edge.h  mofa_bridge.h
ros/iri-ros-pkg/stacks/iri_perception_filters/trunk/iri_pcl_filters/src/: bounding_box.cpp  dummy_mofa_bridge.cpp  jump_edge.cpp  mofa_bridge.cpp
ros/iri-ros-pkg/stacks/iri_perception_filters/trunk/iri_pcl_filters/src/matlab/: objcountA.m
ros/iri-ros-pkg/stacks/iri_segway_rmp/trunk/iri_segway_rmp400_odom/: CMakeLists.txt  mainpage.dox  manifest.xml
ros/iri-ros-pkg/stacks/iri_segway_rmp/trunk/iri_segway_rmp400_odom/cfg/: segway_rmp400_odom_config.cfg
ros/iri-ros-pkg/stacks/iri_segway_rmp/trunk/iri_segway_rmp400_odom/config/testing/: testing-rampeta-mobilelab.vcg  testing.vcg
ros/iri-ros-pkg/stacks/iri_segway_rmp/trunk/iri_segway_rmp400_odom/include/: segway_rmp400_odom_2D.h  segway_rmp400_odom_2D_displacement_based.h  segway_rmp400_odom_2D_original.h  segway_rmp400_odom_3D.h  segway_rmp400_odom_3Dexpmaps.h
ros/iri-ros-pkg/stacks/iri_segway_rmp/trunk/iri_segway_rmp400_odom/launch/: testing_segway_rmp400_odom.launch
ros/iri-ros-pkg/stacks/iri_segway_rmp/trunk/iri_segway_rmp400_odom/launch/testing/: odom_testing.launch  odom_testing_rxplotonly.launch
ros/iri-ros-pkg/stacks/iri_segway_rmp/trunk/iri_segway_rmp400_odom/src/: segway_rmp400_odom_2D.cpp  segway_rmp400_odom_2D_displacement_based.cpp  segway_rmp400_odom_2D_full_displacement_based.cpp  segway_rmp400_odom_2D_original.cpp  segway_rmp400_odom_3D.cpp  segway_rmp400_odom_3Dexpmaps.cpp
ros/iri-ros-pkg/stacks/iri_segway_rmp/trunk/iri_segway_rmp400_odom/tools/: rosbag_status_generator.cpp
ros/iri-ros-pkg/stacks/iri_wam/branches/groovy_and_moveit/iri_wam_ik/: CMakeLists.txt
ros/iri-ros-pkg/stacks/iri_wam/branches/trajectories/iri_bhand/: CMakeLists.txt
ros/iri-ros-pkg/stacks/iri_wam/tags/1.0_used_to_catkinize/iri_wam_tutorial/: CMakeLists.txt  mainpage.dox
ros/iri-ros-pkg/stacks/iri_wam/tags/1.0_used_to_catkinize/iri_wam_wrapper/: CMakeLists.txt  manifest.xml
ros/iri-ros-pkg/stacks/iri_wam/trunk/iri_wam_wrapper/: CMakeLists.txt  manifest.xml
ros/iri-ros-pkg/stacks/iri_wam/trunk/iri_wam_wrapper/include/: wam_driver.h  wam_driver_node.h
ros/iri-ros-pkg/stacks/iri_wam/trunk/iri_wam_wrapper/launch/: iri_wam_21.launch  iri_wam_63.launch  iri_wam_wrapper.launch
ros/iri-ros-pkg/stacks/iri_wam/trunk/iri_wam_wrapper/src/: wam_driver.cpp  wam_driver_node.cpp
ros/iri-ros-pkg/stacks/teo_robot/trunk/teo_teleop/: CMakeLists.txt  mainpage.dox  manifest.xml
ros/iri-ros-pkg/stacks/teo_robot/trunk/teo_teleop/launch/: teo_joy_teleop+rviz_tablet.launch  teo_joy_teleop.launch  teo_wiimote_teleop.launch  testing_joy_connection.launch
ros/iri-ros-pkg/stacks/teo_robot/trunk/teo_teleop/msg/: RearFrontObstacleDetection.msg
ros/iri-ros-pkg/stacks/teo_robot/trunk/teo_teleop/src/: teleop_obstacle_filter.cpp  teleop_teo_joy.cpp  teleop_teo_wiimote.cpp
ros/iri-ros-pkg/stacks/teo_robot/trunk/teo_teleop/test/: send_obstacle_message.cpp
(+1421 files in other folders)
